--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     },
     "dependencies": {
         "vue-router": "3.3.4",
-        "vuetify": "^2.6.3"
+        "vuetify": "^2.6.3",
+        "vuex": "^3.6.2"
     }
 }
