--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "file-saver": "^2.0.5",
         "html2canvas": "^1.4.1",
         "vue-router": "3.3.4",
         "vuetify": "^2.6.3",
